--- a/layouts/page.html.ejs
+++ b/layouts/page.html.ejs
@@ -1,5 +1,8 @@
 ---
 layout: epub_page.html.ejs
 ---
+<section>
 <header><h1><%= title %></h1></header>
-<%- content %>
+<article><%- content %></article>
+<footer style="margin-top: 5em;"><hr/>Copyright © 2015 by David Herron, Creative Commons, CC BY-ND, see <a href="0a-copyright.html">copyright page</a> for details </footer>
+</section>
