--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,8 @@
 
+p { 
+  margin: 8px 0 0;
+}
+
 nav ol {
   list-style-type: decimal;
   margin-top: 8px !important;
@@ -46,4 +50,322 @@ nav ul ul ul {
 img.cover-image {
     max-width: 100%;
     max-height: 100%;
+}
+
+
+/* fonts (keep at bottom); using Free Serif and Sans as a fallback for its rich set of glyphs */
+
+@font-face {
+  font-family: "Free Serif";
+  font-style: normal;
+  font-weight: normal;
+  src: url(../fonts/FreeSerif.otf);
+}
+
+@font-face {
+  font-family: "Free Sans Bold";
+  font-style: normal;
+  font-weight: bold;
+  src: url(../fonts/FreeSansBold.otf);
+}
+
+@font-face {
+  font-family: "Ubuntu Mono";
+  font-weight: normal;
+  font-style: normal;
+  src: url(../fonts/UbuntuMono-R.ttf);
+}
+
+@font-face {
+  font-family: "Ubuntu Mono Bold";
+  font-style: normal;
+  font-weight: bold;
+  src: url(../fonts/UbuntuMono-B.ttf);
+}
+
+@font-face {
+  font-family: "Ubuntu Mono BoldItal";
+  font-weight: bold;
+  font-style: italic;
+  src: url(../fonts/UbuntuMono-BI.ttf);
+}
+
+@font-face {
+  font-family: "Ubuntu Mono Ital";
+  font-weight: normal;
+  font-style: italic;
+  src: url(../fonts/UbuntuMono-RI.ttf);
+}
+
+
+/*
+
+@font-face {
+  font-family: "Raleway Bold";
+  font-style: normal;
+  font-weight: 700;
+  src: url(../fonts/Raleway/Raleway-Bold.ttf);
+}
+
+@font-face {
+  font-family: "Raleway Extra Bold";
+  font-style: normal;
+  font-weight: 800;
+  src: url(../fonts/Raleway/Raleway-ExtraBold.ttf);
+}
+
+@font-face {
+  font-family: "Raleway Extra Light";
+  font-style: normal;
+  font-weight: 200;
+  src: url(../fonts/Raleway/Raleway-ExtraLight.ttf);
+}
+
+@font-face {
+  font-family: "Raleway Heavy";
+  font-style: normal;
+  font-weight: bold;
+  src: url(../fonts/Raleway/Raleway-Heavy.ttf);
+}
+
+@font-face {
+  font-family: "Raleway Light";
+  font-style: normal;
+  font-weight: 300;
+  src: url(../fonts/Raleway/Raleway-Light.ttf);
+}
+
+@font-face {
+  font-family: "Raleway Medium";
+  font-style: normal;
+  font-weight: 500;
+  src: url(../fonts/Raleway/Raleway-Medium.ttf);
+}
+
+@font-face {
+  font-family: "Raleway Regular";
+  font-style: normal;
+  font-weight: 400;
+  src: url(../fonts/Raleway/Raleway-Regular.ttf);
+}
+
+@font-face {
+  font-family: "Raleway Semi Bold";
+  font-style: normal;
+  font-weight: 600;
+  src: url(../fonts/Raleway/Raleway-SemiBold.ttf);
+}
+
+@font-face {
+  font-family: "Raleway Thin";
+  font-style: normal;
+  font-weight: 100;
+  src: url(../fonts/Raleway/Raleway-Thin.ttf);
+}
+
+
+@font-face {
+  font-family: "Roboto Thin";
+  font-style: normal;
+  font-weight: 100;
+  src: url(../fonts/Roboto/Roboto-Thin.ttf);
+}
+
+@font-face {
+  font-family: "Roboto Thin Italic";
+  font-style: italic;
+  font-weight: 100;
+  src: url(../fonts/Roboto/Roboto-ThinItalic.ttf);
+}
+
+@font-face {
+  font-family: "Roboto Light";
+  font-style: normal;
+  font-weight: 300;
+  src: url(../fonts/Roboto/Roboto-Light.ttf);
+}
+
+@font-face {
+  font-family: "Roboto Light Italic";
+  font-style: italic;
+  font-weight: 300;
+  src: url(../fonts/Roboto/Roboto-LightItalic.ttf);
+}
+
+@font-face {
+  font-family: "Roboto Regular";
+  font-style: normal;
+  font-weight: 400;
+  src: url(../fonts/Roboto/Roboto-Regular.ttf);
+}
+
+@font-face {
+  font-family: "Roboto Italic";
+  font-style: italic;
+  font-weight: 400;
+  src: url(../fonts/Roboto/Roboto-Italic.ttf);
+}
+
+@font-face {
+  font-family: "Roboto Bold";
+  font-style: normal;
+  font-weight: 700;
+  src: url(../fonts/Roboto/Roboto-Bold.ttf);
+}
+
+@font-face {
+  font-family: "Roboto Medium";
+  font-style: normal;
+  font-weight: 500;
+  src: url(../fonts/Roboto/Roboto-Medium.ttf);
+}
+
+@font-face {
+  font-family: "Roboto Medium Italic";
+  font-style: italic;
+  font-weight: 500;
+  src: url(../fonts/Roboto/Roboto-MediumItalic.ttf);
+}
+
+@font-face {
+  font-family: "Roboto Bold Italic";
+  font-style: italic;
+  font-weight: 700;
+  src: url(../fonts/Roboto/Roboto-BoldItalic.ttf);
+} */
+
+
+body {
+  font-family: "Free Serif", serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Free Serif", serif;
+}
+
+
+strong, span.bold {
+  font-weight: bold;
+  font-family: "Free Serif", serif;
+}
+
+
+/* code */
+
+pre {
+  white-space: pre-wrap;
+  font-family: "Ubuntu Mono", monospace;
+  margin: 10px 0 10px 20px;
+  font-size: 85%;
+  display: block;
+  -epub-hyphens: none;
+  -webkit-hyphens: none;
+  hyphens: none;
+}
+
+code {
+  font-family: "Ubuntu Mono", monospace;
+}
+
+code strong em, code em strong, pre em strong, pre strong em,
+strong code em code, em code strong code, span.bolditalic code { /* yes, all of these variations are needed */
+  font-weight: bold;
+  font-style: italic;
+  font-family: "Ubuntu Mono BoldItal", monospace;
+}
+
+code em, em code, pre em, em.replaceable {
+  font-family: "Ubuntu Mono Ital", monospace;
+  font-style: italic;
+}
+
+code strong, strong code, pre strong, strong.userinput {
+  font-family: "Ubuntu Mono Bold", monospace;
+  font-weight: bold;
+}
+
+div.example {
+  margin: 10px 0 15px 0 !important;
+}
+
+div.example p.title {
+  font-style: italic;
+  font-weight: normal;
+  font-family: "Free Serif", serif;
+  margin: 10px 0 5px 0 !important;
+}
+
+li pre.example {
+  padding: 10px 0 !important;
+}
+
+div.example-contents pre.programlisting, div.example-contents pre.screen { margin: 0; }
+
+
+/* tables */
+
+div.table, table {
+  margin: 10px auto !important;
+  max-width: 95%;
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+div.table, div.informaltable {
+  page-break-inside: avoid;
+}
+
+tr {
+  border-bottom: 1px solid #c3c3c3;
+}
+
+tr th {
+  border-bottom: #9d9d9d 2px solid !important;
+  border-top: #9d9d9d 2px solid !important; 
+}
+
+tr:nth-of-type(even) {
+  background-color: #f1f6fc;
+}
+
+th {
+  font-family: "Free Sans Bold", sans-serif;
+  color: #000;
+  font-weight: bold;
+}
+
+td, th {
+  padding: 0.3em;
+  text-align: left;
+  vertical-align: baseline;
+  font-size: 80%;
+}
+
+div.informaltable table {
+  margin: 10px auto !important;
+}
+
+div.informaltable table tr {
+  border-bottom: none;
+}
+
+div.informaltable table tr:nth-of-type(even) {
+  background-color: transparent;
+}
+
+div.informaltable td, div.informaltable th {
+  border: #9d9d9d 1px solid;
+}
+
+div.table p.title {
+  font-weight: normal;
+  font-style: italic;
+  font-family: "Free Serif", serif;
+  margin: 20px 0 0 0 !important;
+  text-align: center;
+  padding: 0;
+}
+
+table code {
+  font-size: smaller;
 }
