--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,7 +55,7 @@ img.cover-image {
 
 /* fonts (keep at bottom); using Free Serif and Sans as a fallback for its rich set of glyphs */
 
-@font-face {
+/* @font-face {
   font-family: "Free Serif";
   font-style: normal;
   font-weight: normal;
@@ -67,7 +67,7 @@ img.cover-image {
   font-style: normal;
   font-weight: bold;
   src: url(../fonts/FreeSansBold.otf);
-}
+} */
 
 @font-face {
   font-family: "Ubuntu Mono";
@@ -235,18 +235,90 @@ img.cover-image {
 } */
 
 
+
+/* @font-face {
+  font-family: "Open Sans Light"; 
+  font-style: normal;
+  font-weight: 300;
+  src: url(../fonts/OpenSans-Light.ttf);
+}
+
+@font-face {
+  font-family: "Open Sans Light Italic";
+  font-style: italic;
+  font-weight: 300;
+  src: url(../fonts/OpenSans-LightItalic.ttf);
+} */
+
+@font-face {
+  font-family: "Open Sans Regular";
+  font-style: normal;
+  font-weight: 400;
+  src: url(../fonts/OpenSans/OpenSans-Regular.ttf);
+}
+
+@font-face {
+  font-family: "Open Sans Italic";
+  font-style: italic;
+  font-weight: 400;
+  src: url(../fonts/OpenSans/OpenSans-Italic.ttf);
+}
+
+/* @font-face {
+  font-family: "Open Sans Semibold";
+  font-style: normal;
+  font-weight: 500;
+  src: url(../fonts/OpenSans-Semibold.ttf);
+}
+
+@font-face {
+  font-family: "Open Sans Semibold Italic";
+  font-style: italic;
+  font-weight: 500;
+  src: url(../fonts/OpenSans-SemiboldItalic.ttf);
+} */
+
+@font-face {
+  font-family: "Open Sans Bold";
+  font-style: normal;
+  font-weight: 700;
+  src: url(../fonts/OpenSans/OpenSans-Bold.ttf);
+}
+
+@font-face {
+  font-family: "Open Sans Bold Italic";
+  font-style: italic;
+  font-weight: 700;
+  src: url(../fonts/OpenSans/OpenSans-BoldItalic.ttf);
+}
+
+/* @font-face {
+  font-family: "Open Sans Extra Bold";
+  font-style: normal;
+  font-weight: 800;
+  src: url(../fonts/OpenSans-ExtraBold.ttf);
+}
+
+@font-face {
+  font-family: "Open Sans Bold Extra Italic";
+  font-style: italic;
+  font-weight: 800;
+  src: url(../fonts/OpenSans-ExtraBoldItalic.ttf);
+} */
+
+
 body {
-  font-family: "Free Serif", serif;
+  font-family: "Open Sans Regular", sans-serif;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Free Serif", serif;
+  font-family: "Open Sans Regular", sans-serif;
 }
 
 
 strong, span.bold {
   font-weight: bold;
-  font-family: "Free Serif", serif;
+  font-family: "Open Sans Bold", sans-serif;
 }
 
 
@@ -291,7 +363,7 @@ div.example {
 div.example p.title {
   font-style: italic;
   font-weight: normal;
-  font-family: "Free Serif", serif;
+  font-family: "Open Sans Italic", sans-serif;
   margin: 10px 0 5px 0 !important;
 }
 
@@ -329,7 +401,7 @@ tr:nth-of-type(even) {
 }
 
 th {
-  font-family: "Free Sans Bold", sans-serif;
+  font-family: "Open Sans Bold", sans-serif;
   color: #000;
   font-weight: bold;
 }
@@ -360,7 +432,7 @@ div.informaltable td, div.informaltable th {
 div.table p.title {
   font-weight: normal;
   font-style: italic;
-  font-family: "Free Serif", serif;
+  font-family: "Open Sans Italic", sans-serif;
   margin: 20px 0 0 0 !important;
   text-align: center;
   padding: 0;
