Update to build with new epubtools closing #1

--- a/documents/toc.html.ejs
+++ b/documents/toc.html.ejs
@@ -16,3 +16,50 @@ akashacmsEPUB:
         - 7-about.html
         - 8-references.html
 ---
+
+
+<nav epub:type="toc" id="toc">
+    <ol type="1" start="1">
+        <li><a id="introduction" href="1-introduction.html"></a></li>
+        <li><a id="installation" href="2-installation.html"></a>
+            <ol>
+                <li><a id="2a-install-nodejs" href="2a-install-nodejs.html"></a></li>
+                <li><a id="2b-install-akashacms" href="2b-install-akashacms.html"></a></li>
+                <li><a id="2c-akashacms-directory" href="2c-akashacms-directory.html"></a></li>
+                <li><a id="2d-quickstart" href="2d-quickstart.html"></a></li>
+            </ol>
+        </li>
+        <li><a id="creating-content" href="3-creating-content.html"></a>
+            <ol>
+                <li><a id="3a-document-format" href="3a-document-format.html"></a></li>
+                <li><a id="3b-metadata" href="3b-metadata.html"></a></li>
+                <li><a id="3c-content-markup" href="3c-content-markup.html"></a></li>
+                <li><a id="3d-rendering" href="3d-rendering.html"></a></li>
+                <li><a id="3e-html5-structure" href="3e-html5-structure.html"></a></li>
+            </ol>
+        </li>
+        <li><a id="configuration" href="4-configuration.html"></a>
+            <ol>
+                <li><a id="4a-akashacmsEPUB" href="4a-akashacmsEPUB.html"></a></li>
+                <li><a id="4b-book-metadata" href="4b-book-metadata.html"></a></li>
+                <li><a id="4c-cover-image" href="4c-cover-image.html"></a></li>
+                <li><a id="4d-table-contents" href="4d-table-contents.html"></a></li>
+                <li><a id="4e-copyright-page" href="4e-copyright-page.html"></a></li>
+                <li><a id="4f-links" href="4f-links.html"></a></li>
+                <li><a id="4g-assets" href="4g-assets.html"></a></li>
+                <li><a id="4h-stylesheets" href="4h-stylesheets.html"></a></li>
+                <li><a id="4i-fonts" href="4i-fonts.html"></a></li>
+            </ol>
+        </li>
+        <li><a id="building-EPUB" href="5-building-EPUB.html"></a>
+                <ol>
+                    <li><a id="5a-examining-grunt" href="5a-examining-grunt.html"></a></li>
+                    <li><a id="5b-validation" href="5b-validation.html"></a></li>
+                </ol>
+        </li>
+        <li><a id="akashacms-project" href="6-akashacms-project.html"></a></li>
+        <li><a id="about" href="7-about.html"></a></li>
+        <li><a id="references" href="8-references.html"></a></li>
+        <li><a id="copyright" href="0a-copyright.html"></a></li>
+    </ol>
+</nav>
