--- a/layouts/chapter-index.html.ejs
+++ b/layouts/chapter-index.html.ejs
@@ -9,28 +9,11 @@
 <body>
 
     <section>
-    <header><h1><%
-      if (typeof chapterNumber !== 'undefined') {
-        %>Chapter <%= chapterNumber %>: <%
-      }
-    %><%= title %></h1></header>
+    <header><h1><%= title %></h1></header>
     <article>
 
     <%- content %>
 
-    <%
-    if (typeof akashacmsEPUB.sections !== 'undefined') {
-    %>
-    <aside class="section-list">
-    <ul>
-    <%
-    akashacmsEPUB.sections.forEach(function(section) {
-        %><li><a href="<%= section %>"></a></li><%
-    });
-    %>
-    </ul>
-    </aside>
-    <% } %>
 
     </article>
     <footer style="margin-top: 5em;"><hr/>Copyright © 2015 by David Herron, Creative Commons, CC BY-ND, see <a href="0a-copyright.html">copyright page</a> for details </footer>
