Edit the installation process documentation

--- a/documents/toc.html.ejs
+++ b/documents/toc.html.ejs
@@ -21,14 +21,7 @@ akashacmsEPUB:
 <nav epub:type="toc" id="toc">
     <ol type="1" start="1">
         <li><a id="introduction" href="1-introduction.html"></a></li>
-        <li><a id="installation" href="2-installation.html"></a>
-            <ol>
-                <li><a id="2a-install-nodejs" href="2a-install-nodejs.html"></a></li>
-                <li><a id="2b-install-akashacms" href="2b-install-akashacms.html"></a></li>
-                <li><a id="2c-akashacms-directory" href="2c-akashacms-directory.html"></a></li>
-                <li><a id="2d-quickstart" href="2d-quickstart.html"></a></li>
-            </ol>
-        </li>
+        <li><a id="installation" href="2-installation.html"></a></li>
         <li><a id="creating-content" href="3-creating-content.html"></a>
             <ol>
                 <li><a id="3a-document-format" href="3a-document-format.html"></a></li>
