Editing and restructuring

--- a/documents/toc.html.ejs
+++ b/documents/toc.html.ejs
@@ -10,8 +10,6 @@ layout: page.html.ejs
         <li><a id="installation" href="2-installation.html"></a></li>
         <li><a id="creating-content" href="3-creating-content.html"></a>
             <ol>
-                <li><a id="3a-document-format" href="3a-document-format.html"></a></li>
-                <li><a id="3b-metadata" href="3b-metadata.html"></a></li>
                 <li><a id="3c-content-markup" href="3c-content-markup.html"></a></li>
                 <li><a id="3d-rendering" href="3d-rendering.html"></a></li>
                 <li><a id="3e-html5-structure" href="3e-html5-structure.html"></a></li>
@@ -30,14 +28,15 @@ layout: page.html.ejs
                 <li><a id="4i-fonts" href="4i-fonts.html"></a></li>
             </ol>
         </li>
-        <li><a id="building-EPUB" href="5-building-EPUB.html"></a>
+        <li><a id="structure" href="5-structure.html"></a></li>
+        <li><a id="building-EPUB" href="6-building-EPUB.html"></a>
             <ol>
-                <li><a id="5b-validation" href="5b-validation.html"></a></li>
+                <li><a id="5b-validation" href="6b-validation.html"></a></li>
             </ol>
         </li>
-        <li><a id="akashacms-project" href="6-akashacms-project.html"></a></li>
-        <li><a id="about" href="7-about.html"></a></li>
-        <li><a id="references" href="8-references.html"></a></li>
+        <li><a id="akashacms-project" href="7-akashacms-project.html"></a></li>
+        <li><a id="about" href="8-about.html"></a></li>
+        <li><a id="references" href="9-references.html"></a></li>
         <li><a id="copyright" href="0a-copyright.html"></a></li>
     </ol>
 </nav>
