--- a/documents/toc.html.ejs
+++ b/documents/toc.html.ejs
@@ -15,16 +15,7 @@ layout: page.html.ejs
                 <li><a id="3e-html5-structure" href="3e-html5-structure.html"></a></li>
             </ol>
         </li>
-        <li><a id="configuration" href="4-configuration.html"></a>
-            <ol>
-                <li><a id="4c-cover-image" href="4c-cover-image.html"></a></li>
-                <li><a id="4e-copyright-page" href="4e-copyright-page.html"></a></li>
-                <li><a id="4f-links" href="4f-links.html"></a></li>
-                <li><a id="4g-assets" href="4g-assets.html"></a></li>
-                <li><a id="4h-stylesheets" href="4h-stylesheets.html"></a></li>
-                <li><a id="4i-fonts" href="4i-fonts.html"></a></li>
-            </ol>
-        </li>
+        <li><a id="configuration" href="4-configuration.html"></a></li>
         <li><a id="structure" href="5-structure.html"></a></li>
         <li><a id="building-EPUB" href="6-building-EPUB.html"></a>
             <ol>
