--- a/documents/toc.html.ejs
+++ b/documents/toc.html.ejs
@@ -3,6 +3,22 @@ title: Table of Contents
 layout: page.html.ejs
 ---
 
+<!--
+TODO
+
+In a new chapter,
+* Discuss Mahabhuta processing specific to EPUB target
+* Discuss how to use akashacms-embeddables content in an EPUB
+* Discuss how to use akashacms-document-viewers content in an EPUB
+
+In a new chapter,
+* Discuss what's in a good ebook stylesheet
+*
+
+Split up 4-configuration.html
+
+<a href="link-to-bad.html"></a>
+-->
 
 <nav epub:type="toc" id="toc">
     <ol type="1" start="1">
@@ -19,7 +35,8 @@ layout: page.html.ejs
         <li><a id="structure" href="5-structure.html"></a></li>
         <li><a id="building-EPUB" href="6-building-EPUB.html"></a>
             <ol>
-                <li><a id="5b-validation" href="6b-validation.html"></a></li>
+                <li><a id="6aa-epub-website" href="6aa-epub-website.html"></a></li>
+                <li><a id="6b-validation" href="6b-validation.html"></a></li>
             </ol>
         </li>
         <li><a id="akashacms-project" href="7-akashacms-project.html"></a></li>
