--- a/documents/toc.html.ejs
+++ b/documents/toc.html.ejs
@@ -1,6 +1,6 @@
 ---
 title: Table of Contents
-layout: page.html.ejs
+layout: ebook-toc-page.html.ejs
 ---
 
 <!--
@@ -14,9 +14,6 @@ In a new chapter,
 In a new chapter,
 * Discuss what's in a good ebook stylesheet
 *
-
-Split up 4-configuration.html
-
 <a href="link-to-bad.html"></a>
 -->
 
@@ -29,6 +26,7 @@ Split up 4-configuration.html
                 <li><a id="3c-content-markup" href="3c-content-markup.html"></a></li>
                 <li><a id="3d-rendering" href="3d-rendering.html"></a></li>
                 <li><a id="3e-html5-structure" href="3e-html5-structure.html"></a></li>
+                <li><a id="3e-internal-links" href="3e-internal-links.html"></a></li>
             </ol>
         </li>
         <li><a id="configuration" href="4-configuration.html"></a></li>
