Finalize splitting LINK discussion in own file

--- a/documents/toc.html.ejs
+++ b/documents/toc.html.ejs
@@ -13,7 +13,9 @@ In a new chapter,
 
 In a new chapter,
 * Discuss what's in a good ebook stylesheet
-*
+* Incorporate media queries from internal-links
+* EPUB Adaptive Layout https://github.com/epubtools/epubtools/issues/8
+
 <a href="link-to-bad.html"></a>
 -->
 
