Document using akashacms-embeddables

--- a/documents/toc.html.ejs
+++ b/documents/toc.html.ejs
@@ -7,11 +7,6 @@ layout: ebook-toc-page.html.ejs
 TODO
 
 In a new chapter,
-* Discuss Mahabhuta processing specific to EPUB target
-* Discuss how to use akashacms-embeddables content in an EPUB
-* Discuss how to use akashacms-document-viewers content in an EPUB
-
-In a new chapter,
 * Discuss what's in a good ebook stylesheet
 * Incorporate media queries from internal-links
 * EPUB Adaptive Layout https://github.com/epubtools/epubtools/issues/8
@@ -31,7 +26,11 @@ In a new chapter,
                 <li><a id="3e-internal-links" href="3e-internal-links.html"></a></li>
             </ol>
         </li>
-        <li><a id="configuration" href="4-configuration.html"></a></li>
+        <li><a id="configuration" href="4-configuration.html"></a>
+            <ol>
+                <li><a id="4a-akasharender-epub" href="4a-akasharender-epub.html"></a></li>
+            </ol>
+        </li>
         <li><a id="structure" href="5-structure.html"></a></li>
         <li><a id="building-EPUB" href="6-building-EPUB.html"></a>
             <ol>
