--- a/documents/toc.html.ejs
+++ b/documents/toc.html.ejs
@@ -7,8 +7,6 @@ layout: ebook-toc-page.html.ejs
 TODO
 
 In a new chapter,
-* Discuss what's in a good ebook stylesheet
-* Incorporate media queries from internal-links
 * EPUB Adaptive Layout https://github.com/epubtools/epubtools/issues/8
 
 <a href="link-to-bad.html"></a>
@@ -22,6 +20,7 @@ In a new chapter,
             <ol>
                 <li><a id="3c-content-markup" href="3c-content-markup.html"></a></li>
                 <li><a id="3d-rendering" href="3d-rendering.html"></a></li>
+                <li><a id="3da-css" href="3da-css.html"></a></li>
                 <li><a id="3e-html5-structure" href="3e-html5-structure.html"></a></li>
                 <li><a id="3e-internal-links" href="3e-internal-links.html"></a></li>
             </ol>
