--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,84 @@ p {
   margin: 8px 0 0;
 }
 
+span.underline { text-decoration: underline; }
+
+span.strikethrough { text-decoration: line-through; }
+
+span.smallcaps { font-variant: small-caps; }
+
+.boxedtext, .keycap {
+  border-style: solid;
+  border-width: 1px;
+  border-color: #000;
+  padding: 1px;
+}
+
+span.gray50 {
+  color: #7F7F7F; /* 50 % gray */
+}
+
+.gray-background, .reverse-video {
+  background: #2E2E2E;
+  color: #FFF;
+}
+
+.light-gray-background {
+  background: #A0A0A0;
+}
+
+h1 {
+  font-size: 1.5em;
+  font-weight: bold;
+  font-family: "Free Sans Bold", sans-serif;
+  margin-top: 20px !important;
+
+  padding: 5px;
+  border-radius: 4px;
+
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#f2f5f6+0,e3eaed+37,c8d7dc+100;Grey+3D+%234 */
+background: #f2f5f6; /* Old browsers */
+background: -moz-linear-gradient(top, #f2f5f6 0%, #e3eaed 37%, #c8d7dc 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(top, #f2f5f6 0%,#e3eaed 37%,#c8d7dc 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to bottom, #f2f5f6 0%,#e3eaed 37%,#c8d7dc 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f2f5f6', endColorstr='#c8d7dc',GradientType=0 ); /* IE6-9 */
+}
+
+h2 {
+  font-size: 1.3em;
+  font-weight: bold;
+  font-family: "Free Sans Bold", sans-serif;
+  color: #8e0012;
+  margin: 15px 0 8px 0 !important;
+}
+
+h3 {
+  font-size: 1.1em;
+  font-weight: bold;
+  font-family: "Free Sans Bold", sans-serif;
+  margin: 10px 0 8px 0 !important;
+}
+
+h4, h5, h6 {
+  font-size: bold;
+  font-weight: 1em;
+  font-family: "Free Sans Bold", sans-serif;
+  color: #555;
+  margin: 9px 0 !important;
+}
+
+/* conditional multi-column support */
+
+.responsive-2columns {
+    column-count: 1;
+}
+
+@media only screen and (min-device-width : 768px) {
+    .responsive-2columns {
+        column-count: 2
+    }
+}
+
 /* Add styling for the <nav> structure in the Table of Contents */
 
 nav ol {
@@ -340,7 +418,7 @@ pre {
   hyphens: none;
   background-color: #f5f5f5;
   border: 1px solid #ccc;
-  /* border-radius: 4px; */
+  border-radius: 4px;
 }
 
 code {
