--- a/documents/toc.html.ejs
+++ b/documents/toc.html.ejs
@@ -1,5 +1,5 @@
 ---
-title: Table of Contents
+title: Creating eBooks with Markdown and Open Source Tools -- Table of Contents
 layout: ebook-toc-page.html.ejs
 ---
 
