id attributes in Table of Contents

--- a/documents/toc.html.ejs
+++ b/documents/toc.html.ejs
@@ -18,23 +18,23 @@ In a new chapter,
         <li><a id="installation" href="2-installation.html"></a></li>
         <li><a id="creating-content" href="3-creating-content.html"></a>
             <ol>
-                <li><a id="3c-content-markup" href="3c-content-markup.html"></a></li>
-                <li><a id="3d-rendering" href="3d-rendering.html"></a></li>
-                <li><a id="3da-css" href="3da-css.html"></a></li>
-                <li><a id="3e-html5-structure" href="3e-html5-structure.html"></a></li>
-                <li><a id="3e-internal-links" href="3e-internal-links.html"></a></li>
+                <li><a id="chap-3c-content-markup" href="3c-content-markup.html"></a></li>
+                <li><a id="chap-3d-rendering" href="3d-rendering.html"></a></li>
+                <li><a id="chap-3da-css" href="3da-css.html"></a></li>
+                <li><a id="chap-3e-html5-structure" href="3e-html5-structure.html"></a></li>
+                <li><a id="chap-3e-internal-links" href="3e-internal-links.html"></a></li>
             </ol>
         </li>
         <li><a id="configuration" href="4-configuration.html"></a>
             <ol>
-                <li><a id="4a-akasharender-epub" href="4a-akasharender-epub.html"></a></li>
+                <li><a id="chap-4a-akasharender-epub" href="4a-akasharender-epub.html"></a></li>
             </ol>
         </li>
         <li><a id="structure" href="5-structure.html"></a></li>
         <li><a id="building-EPUB" href="6-building-EPUB.html"></a>
             <ol>
-                <li><a id="6aa-epub-website" href="6aa-epub-website.html"></a></li>
-                <li><a id="6b-validation" href="6b-validation.html"></a></li>
+                <li><a id="chap-6aa-epub-website" href="6aa-epub-website.html"></a></li>
+                <li><a id="chap-6b-validation" href="6b-validation.html"></a></li>
             </ol>
         </li>
         <li><a id="akashacms-project" href="7-akashacms-project.html"></a></li>
